--- a/.github/workflows/e2e_tests.yml
+++ b/.github/workflows/e2e_tests.yml
@@ -99,5 +99,7 @@ jobs:
           path: |
             playwright-report/
             test-results/
+            e2e/test-results.xml
             **/playwright*.zip
+            storage/logs/
           retention-days: 7
