Dump the Keycloak login client id

--- a/.github/workflows/e2e_tests.yml
+++ b/.github/workflows/e2e_tests.yml
@@ -91,7 +91,10 @@ jobs:
           E2E_TEST_V1_PASSWORD: ${{ secrets.E2E_TEST_V1_PASSWORD }}
           KEYCLOAK_LOGIN_CLIENT_ID: ${{ secrets.KEYCLOAK_LOGIN_CLIENT_ID }}
           KEYCLOAK_LOGIN_CLIENT_SECRET: ${{ secrets.KEYCLOAK_LOGIN_CLIENT_SECRET }}
-        run: npx playwright test e2e/tests/integrations/admin/activate-integration.test.ts
+          KEYCLOAK_LOGIN_REALM_NAME: ${{ secrets.KEYCLOAK_LOGIN_REALM_NAME }}
+        run: |
+          echo "Using Keycloak login client id: $KEYCLOAK_LOGIN_CLIENT_ID"
+          npx playwright test e2e/tests/integrations/admin/activate-integration.test.ts
 
       - name: 📦 Upload Playwright artifacts
         if: always()
