Change ACC Keycloak URL

--- a/.env.ci
+++ b/.env.ci
@@ -85,7 +85,7 @@ KEYCLOAK_LOGIN_CLIENT_ID=***
 KEYCLOAK_LOGIN_CLIENT_SECRET=***
 KEYCLOAK_LOGIN_REDIRECT_URI=http://localhost:8000/auth/callback
 KEYCLOAK_LOGIN_PARAMETERS="locale=nl&referrer=publiq-platform&prompt=login&skip_verify_legacy=true&product_display_name=publiq platform"
-KEYCLOAK_LOGIN_REALM_NAME=
+KEYCLOAK_LOGIN_REALM_NAME='uitid'
 
 UITID_V1_CONSUMER_CREATION_ENABLED=true
 # MUST always be set to UiTiD v1 ACC environment config except for the .env for the production app!
@@ -137,10 +137,10 @@ E2E_TEST_PASSWORD=
 E2E_TEST_ADMIN_EMAIL=dev+e2etest-admin@publiq.be
 E2E_TEST_ADMIN_PASSWORD=
 
-KEYCLOAK_ACC_BASE_URL='https://account.kcpoc.lodgon.com/'
-KEYCLOAK_ACC_REALM_NAME='myrealm'
-KEYCLOAK_ACC_CLIENT_ID='php_client'
-KEYCLOAK_ACC_CLIENT_SECRET='super-secret'
+KEYCLOAK_ACC_BASE_URL='https://account-acc.uitid.be/'
+KEYCLOAK_ACC_REALM_NAME='uitid'
+KEYCLOAK_ACC_CLIENT_ID=***
+KEYCLOAK_ACC_CLIENT_SECRET=***
 
 # Incorrect values, but need to contain a valid UUID formatted string
 KEYCLOAK_ACC_SCOPE_SEARCH_API_ID='06059529-74b5-422a-a499-ffcaf065d437' #publiq-api-sapi-scope
