--- a/.github/workflows/e2e_tests.yml
+++ b/.github/workflows/e2e_tests.yml
@@ -92,7 +92,7 @@ jobs:
           KEYCLOAK_LOGIN_CLIENT_ID: ${{ secrets.KEYCLOAK_LOGIN_CLIENT_ID }}
           KEYCLOAK_LOGIN_CLIENT_SECRET: ${{ secrets.KEYCLOAK_LOGIN_CLIENT_SECRET }}
           KEYCLOAK_ACC_CLIENT_ID: ${{ secrets.KEYCLOAK_ACC_CLIENT_ID }}
-          KEYCLOAK_ACC_CLIENT_SECRET: ${{ secrets.KEYCLOAK_ACC_CLIENT_SECRET
+          KEYCLOAK_ACC_CLIENT_SECRET: ${{ secrets.KEYCLOAK_ACC_CLIENT_SECRET }}   
         run: |
           echo "Using Keycloak login client id: $KEYCLOAK_LOGIN_CLIENT_ID"
           npx playwright test e2e/tests/integrations/admin/activate-integration.test.ts
