--- a/.github/workflows/e2e_tests.yml
+++ b/.github/workflows/e2e_tests.yml
@@ -65,6 +65,9 @@ jobs:
       - name: 📂 Migrate database
         run: php artisan migrate --force
 
+      - name: 🌐 Seed database
+        run: php artisan db:seed --force
+
       - name: 📦 Install npm dependencies
         run: npm ci
 
