--- a/.github/workflows/e2e_tests.yml
+++ b/.github/workflows/e2e_tests.yml
@@ -74,10 +74,8 @@ jobs:
       - name: 💅🏻 Build frontend assets
         run: npm run build
 
-      - name: 🔍 Verify built assets exist
-        run: |
-          ls -la public/build/
-          cat public/build/manifest.json || echo "No manifest found"
+      - name: 📦 Publish Nova assets
+        run: php artisan nova:publish
 
       - name: 🎭 Install Playwright browsers
         run: npx playwright install --with-deps
